# CrudeBoxEngine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: Main.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h  Math.h
Engine/src/: Engine.cpp  GameObject.cpp  GameObject.h
Engine/src/components/: Component.cpp  Component.h  Graphics.cpp  Graphics.h  Transform.h
Engine/src/renderer/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Engine/src/scene/: Scene.cpp  Scene.h
Engine/src/window/: InputListener.cpp  InputListener.h  Window.cpp  Window.h
